<resources>
    <string name="app_name">Location Aware</string>
    <string name="type_location">Enter Location Name</string>
    <string name="default_location">McDonald\'s</string>
    <string name="btn_search_text">Search</string>

    <string name="searching_places">Searching Places</string>
    <string name="suggesting_places">Generating Suggestions</string>
    <string name="logging_in">Logging In</string>
    <string name="signing_up">Signing Up</string>

    <string name="map_circle_description">Google Map with circles.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_in_pager_demo_label">Map In Pager</string>
    <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
    <string name="marker_demo_label">Markers</string>
    <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC2DCKZARG6owQoun9lGzcA2MND9CHf4Cw</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <!-- Permissions -->
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_google">or Sign with Google</string>
    <string name="action_signup">Sign Up</string>
    <string name="goto_signup">Not Registered? Sign Up</string>
    <string name="goto_signin">Registered? Sign in now</string>
    <string name="action_signup_google">or Sign Up with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_page">Profile</string>
    <string name="suggestion_page">Suggestion</string>
    <string name="logout_page">Logout</string>
    <string name="feedback_page">Feedback</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_map">Map Page</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_mapview">Map View</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Profile -->
    <string name="profile_full_name">Full name</string>
    <string name="profile_email_address">Email address</string>
    <string name="profile_mobile_number">Mobile number</string>
    <string name="profile_update_profile_btn">Update Profile</string>
    <string name="profile_submit_feedback_btn">Submit Feedback</string>
    <string name="profile_submit_map_review_btn">Submit</string>
    <string name="profile_cancel_map_review_btn">Cancel</string>

    <!-- Feedback -->
    <string name="prompt_feedback_title">Feedback Subject</string>
    <string name="prompt_feedback_content">Some comments…</string>

    <!-- Map Review -->
    <string name="prompt_map_review_title">Review Subject</string>
    <string name="prompt_map_review_content">Add some description…</string>
    <string name="no_review_yet">No review yet !</string>
    <string name="title_activity_suggestion">Suggestions</string>
    <string name="google_suggestions">Google Suggestions</string>
    <string name="suggestions_based_recent_searches">Suggestions based recent searches</string>
    <string name="toggle_hide">Hide</string>
    <string name="toggle_show">Show</string>

</resources>
