<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_map_review_title"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/prompt_map_review_content"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelReviewBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/profile_cancel_map_review_btn"
            android:textSize="15sp"
            android:layout_marginEnd="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitReviewBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/profile_submit_map_review_btn"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>